# vibe

./: .gitignore  README.md  fuck  list_devices.py  main.py  pyproject.toml  run.sh  vibe
